--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
     "daisyui": "^5.0.50",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.1",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
