--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "daisyui": "^5.0.50",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.1",
