--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "daisyui": "^5.0.50",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
